      pileup statistics for a BAM file; returns a data.frame with
      columns summarizing information extracted from alignments
      overlapping each genomic position

    o scanBam,BamSampler-method returns requested and actual
      yieldSize, and total reads

    o seqinfo,BamFileList-method returns the merged seqinfo of each
      BamFile; seqlevels and seqlengths behave similarly.

SIGNIFICANT USER-VISIBLE CHANGES

    o rename PileupParam class and constructor -> ApplyPileupsParam

BUG FIXES

    o scanBam(BamSampler(), param=param) with a 'which' argument no
      longer mangles element names, and respects yield size

    o applyPileups checks that seqlevels are identical across files

CHANGES IN VERSION 1.15.0
-------------------------

NEW FEATURES

    o asSam converts BAM files to SAM files

    o razip, bgzip re-compress directly from .gz files

    o yieldReduce through a BAM or other file, applying a MAP function
      to each chunk and reducing the result to it's final representation

SIGNIFICANT USER-VISIBLE CHANGES

    o bgzip default extension changed to '.bgz'

    o seqinfo,BamFile-method attempts to return seqnames in 'natural'
      order, e.g., chr1, chr2, ...

    o yieldSize now works on BAM files queried with ranges. Successive
      ranges are input until the total number of records first equals
      or exceeds yieldSize..

    o scanFa supports DNA, RNA, and AAStringSet return objects

BUG FIXES

    o scanFa returns correct sequence at the very end of files

    o razip compresses small files

    o applyPileups no longer crashes in the absence of an index file

CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o seqinfo(FaFile) returns available information on sequences and
      lengths on Fa (indexed fasta) files.

    o filterBam accepts FilterRules call-backs for arbitrary
      filtering.

    o add isIncomplete,BamFile-method to test for end-of-file
