@@ -27,7 +27,7 @@ static const R_CallMethodDef callMethods[] = {
     {".bamfile_close", (DL_FUNC) & bamfile_close, 1},
     {".bamfile_isopen", (DL_FUNC) & bamfile_isopen, 1},
     {".bamfile_isincomplete", (DL_FUNC) & bamfile_isincomplete, 1},
-    {".read_bamfile_header", (DL_FUNC) & read_bamfile_header, 1},
+    {".read_bamfile_header", (DL_FUNC) & read_bamfile_header, 2},
     {".scan_bamfile", (DL_FUNC) & scan_bamfile, 9},
     {".count_bamfile", (DL_FUNC) & count_bamfile, 4},
     {".prefilter_bamfile", (DL_FUNC) & prefilter_bamfile, 7},
